--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Sua Infraestrutura como Código</li>
+        <li>Ansible</li>
         <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
         <li>Kubernetes</li>
     </ul>
