Alterando nome do curso Vagrant

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando Máquinas Virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Infraestrutura como Código</li>
         <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
